# omlx

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  mcp.example.json  pyproject.toml  pytest.ini
.github/workflows/: update-formula.yml
Formula/: omlx.rb
docs/: CONTRIBUTING.md  oQ_Quantization.md
docs/experimental/: dflash_mlx_integration.md
omlx/: __init__.py  cli.py  config.py  engine_core.py  engine_pool.py  exceptions.py  logging_config.py  memory_monitor.py  model_discovery.py  model_profiles.py  model_registry.py  model_settings.py  optimizations.py  oq.py  oq_calibration_data.json  output_collector.py  prefill_progress.py  process_memory_enforcer.py  request.py  scheduler.py  server.py  server_metrics.py  settings.py  turboquant_kv.py
omlx/adapter/: __init__.py  gemma4.py  harmony.py  output_parser.py
omlx/admin/: __init__.py  accuracy_benchmark.py  auth.py  benchmark.py  build_css.py  hf_downloader.py  hf_uploader.py  ms_downloader.py  oq_manager.py  routes.py  tailwind.config.js  vendor_deps.py
omlx/admin/i18n/: en.json  ja.json  ko.json  zh-TW.json  zh.json
omlx/admin/static/css/: dashboard.css  tailwind.css
omlx/admin/static/fonts/inter/: inter.css
omlx/admin/static/fonts/noto-sans-jp/: noto-sans-jp.css
omlx/admin/static/fonts/noto-sans-kr/: noto-sans-kr.css
omlx/admin/static/fonts/noto-sans-sc/: noto-sans-sc.css
omlx/admin/static/fonts/noto-sans-tc/: noto-sans-tc.css
omlx/admin/static/js/: dashboard.js
omlx/admin/templates/: base.html  chat.html  dashboard.html  login.html
omlx/admin/templates/dashboard/: _bench.html  _bench_accuracy.html  _logs.html  _modal_model_settings.html  _models.html  _navbar.html  _settings.html  _status.html
omlx/api/: __init__.py  anthropic_models.py  anthropic_utils.py  audio_models.py  audio_routes.py  embedding_models.py  embedding_utils.py  grammar.py  mcp_routes.py  openai_models.py  rerank_models.py  responses_models.py  responses_utils.py  shared_models.py  thinking.py  tool_calling.py  utils.py
omlx/api/adapters/: __init__.py  anthropic.py  base.py  openai.py  sse_formatter.py
omlx/cache/: __init__.py  boundary_snapshot_store.py  factory.py  hybrid_cache.py  interface.py  paged_cache.py  paged_ssd_cache.py  prefix_cache.py  recovery.py  stats.py  tiered_manager.py  type_handlers.py  type_registry.py  vision_feature_cache.py
omlx/engine/: __init__.py  audio_utils.py  base.py  batched.py  dflash.py  embedding.py  reranker.py  sts.py  stt.py  tts.py  vlm.py
omlx/eval/: __init__.py  arc.py  base.py  bbq.py  cmmlu.py  datasets.py  gsm8k.py  hellaswag.py  humaneval.py  jmmlu.py  kmmlu.py  livecodebench.py  mathqa.py  mbpp.py  mmlu.py  mmlu_pro.py  safetybench.py  truthfulqa.py  winogrande.py
omlx/eval/data/: arc_challenge.jsonl  cmmlu_dev.jsonl  cmmlu_test.jsonl  humaneval.jsonl  jmmlu_test.jsonl  kmmlu_dev.jsonl  livecodebench.jsonl  mathqa_test.jsonl  mbpp.jsonl  mmlu_dev.jsonl  truthfulqa_mc.jsonl  winogrande_val.jsonl
omlx/integrations/: __init__.py  base.py  codex.py  openclaw.py  opencode.py  pi.py
omlx/mcp/: __init__.py  client.py  config.py  executor.py  manager.py  tools.py  types.py
omlx/models/: __init__.py  base_model.py  embedding.py  llm.py  reranker.py  vlm.py  xlm_roberta.py
omlx/patches/: __init__.py  gated_delta_advance.py  index_cache.py  specprefill.py  turboquant_attention.py
omlx/utils/: __init__.py  formatting.py  hardware.py  image.py  install.py  model_loading.py  network.py  tokenizer.py
packaging/: .gitignore  README.md  build.py  venvstacks.toml
packaging/omlx_app/: __init__.py  __main__.py  app.py  config.py  preferences.py  server_manager.py  updater.py  welcome.py  widgets.py
scripts/: normalize_i18n.py
tests/: bench_grammar_bitmask.py  bench_results.csv  conftest.py  e2e_vision_cache.py  mocks.py  test_accuracy_benchmark.py  test_admin_api_key.py  test_admin_auth.py  test_admin_cache_probe.py  test_admin_profiles_api.py  test_admin_reload.py  test_admin_server_aliases.py  test_admin_update_check.py  test_anthropic_adapter.py  test_anthropic_models.py  test_api_auth.py  test_api_utils.py  test_audio_api.py  test_audio_discovery.py  test_audio_memory.py  test_audio_sts.py  test_audio_stt.py  test_audio_tts.py  test_audio_utils.py  test_batched_engine.py  test_benchmark.py  test_boundary_snapshot_store.py  test_cache_factory.py  test_cache_stats.py  test_cache_type_handlers.py  test_chat_image_upload.py  test_chat_tool_call.py  test_cli.py  test_config.py  test_context_scaling.py  test_context_window.py  test_dflash_engine.py  test_disconnect_guard.py  test_embedding.py  test_engine_core.py  (+70 more)
tests/fixtures/: generate_test_audio.py
tests/integration/: test_boundary_cache_consistency.py  test_e2e_streaming.py  test_full_integration.py  test_real_model_inference.py  test_server_endpoints.py  test_vlm_mrope_integration.py
